2010-02-27  Rudy Neeser  <rudy.neeser@gmail.com>

	* random.lisp (noise3): A 3D perlin noise implementation.
	(initialize-noise3): Added a method to initialise the data used by
	NOISE3.
	(*perlin-gradients*, *perlin-permutations*): These store the data
	needed for the perlin noise generator.
	(draw-noise3-output): A functio that allows the user to output an
	image of the perlin noise function.

	* conditions.lisp (required-dimension-error): Added a new subclass
	of dimension-error. Allows operations requiring specific
	dimensions to report errors.

2010-02-23  Rudy Neeser  <rudy.neeser@gmail.com>

	* interpolate.lisp (between): Modifed to take numbers as
	arguments.
	(linear-interpolation): Fixed a bug in the method accepting
	numbers as arguments.

2010-02-22  Rudy Neeser  <rudy.neeser@gmail.com>

	* random.lisp (normal): Added a function to create normally
	distributed values.
	(make-random-vector): Added a function to create a vector filled
	with random values.
	(make-random-matrix): Added a function to create a matrix filled
	with random data.

2010-02-19  Rudy Neeser  <rudy.neeser@gmail.com>

	* README (If): Updated the README file to discuss the changes to
	LINEAR-INTERPOLATION

	* interpolate.lisp (linear-interpolation): Added a method so that
	this function can operate on numbers.

2010-01-30  Rudy Neeser  <rudy.neeser@gmail.com>

	* LICENSE: Updated to ensure that the license is "GPL, version 3,
	and later versions". This was originally intended, and is is the
	text in each individual source file.

	* README: Some minor updates relating to how the LICENSE is
	explained.

2010-01-27  Rudy Neeser  <rudy.neeser@gmail.com>

	* matrix.lisp (matrix=): Added a function to compare matrix
	objects.
	(dimension): Added an implementation for MATRIX objects.

	* generics.lisp (copy): Added an implementation that copies lists.
	(equivalent): Added a generic function to test for equivalence
	between two objects.

	* vector.lisp (dimension): Renamed LENGTH to DIMENSION.