@@ -1,5 +1,13 @@
 2010-02-27  Rudy Neeser  <rudy.neeser@gmail.com>
 
+	* random.lisp (noise3): Updated to test the given argument to
+	ensure that it is a 3-vector.
+
+	* tests.lisp (etest-needed-vector-dimension): A helper macro for
+	testing required dimension sizes.
+	(test-dimensions): Added two methods that will test a lm:vector
+	and list to ensure that they have the required dimension.
+
 	* random.lisp (noise3): A 3D perlin noise implementation.
 	(initialize-noise3): Added a method to initialise the data used by
 	NOISE3.
